# Framework-Deck

./: .gitignore  .gitmodules  CLAUDE.md  README.md
app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: make_icon.py
app/src-tauri/src/: lib.rs  main.rs
app/src/api/: client.ts  types.ts
app/src/components/analog/: LEDIndicator.tsx
app/src/components/display/: ChannelSelector.tsx  OscilloscopeView.tsx
app/src/components/keyboard/Firmware/: FirmwarePanel.tsx  FirmwareStage.tsx
app/src/components/keyboard/Inspector/: ColorPicker.tsx  ConfigHistory.tsx  KeymapFlow.tsx  PropertyPanel.tsx
app/src/components/keyboard/Stage/: KeyboardStage.tsx  VirtualKeyboard.tsx
app/src/components/layout/: ControlsPanel.tsx  Panel.tsx  StatusBar.tsx
app/src/components/nav/: NavRail.tsx
app/src/components/panels/: BatteryPanel.tsx  DeviceHeader.tsx  FanPanel.tsx  PowerPanel.tsx
app/src/config/: channels.ts
app/src/data/: mockHardware.ts
app/src/hooks/: useConfig.ts  useHealth.ts  usePower.ts  useThermal.ts
app/src/layouts/: AppShell.tsx
app/src/modules/: BatteryModule.tsx  DashboardModule.tsx  FanModule.tsx  InputModulesModule.tsx  KeyboardModule.tsx  PlaceholderModule.tsx  PowerModule.tsx  SettingsModule.tsx  SystemModule.tsx
app/src/store/: app.ts  device.ts
app/src/types/: navigation.ts
app/src/utils/: font.ts  format.ts
