[package]
name = "framework-deck"
version = "2.0.0"
edition = "2021"

[lib]
name = "framework_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
